Fix .content align

--- a/css/typography.scss
+++ b/css/typography.scss
@@ -73,6 +73,7 @@ a {
 
 .entry {
 	padding: 15px;
+    text-align: justify;
     
 	a {
 		color: black;
